Added some color. Troubleshooting on link placement unsuccessful.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,21 @@
-font-family: roboto
+.Links{
+display: flex;
+flex-flow: row;
+align-content: center;
+justify-content: flex-end;
+gap: 16px;
+background-color: #1F2937;
+color: white;
+}
+
+
+
+.Logo{
+
+display: flex;
+align-content: center;
+justify-content: left;
+background-color: #1F2937;
+
+}
+
