--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,99 @@
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: inherit;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
 .Links{
 display: flex;
-flex-flow: row;
-align-content: center;
-justify-content: flex-end;
+align-items: center;
 gap: 16px;
-background-color: #1F2937;
 color: white;
+height: 60px;
+}
+
+
+.LinksWrap{
+    display: inline-block;
+    position: absolute;
+    right: 16px;
+}
+.header {
+    background-color: #1F2937;
 }
 
 
 
 .Logo{
-
-display: flex;
-align-content: center;
+display: inline-block;
 justify-content: left;
 background-color: #1F2937;
+gap: 16px;
+}
+
+.ThisWebsiteIsAwesome{
+
+    background-color: #1F2937;
+    color: #f5f5f5;
+    display: flex;
+    flex-direction: row wrap;
+    align-content: center;
+    justify-content: center;
+    padding: 50px;
+    border: 2px;
+    
+}
+
+.image{
+
+
 
 }
 
+
+.Text{
+
+    flex-flow: column-wrap;
+    align-content: center;
+    justify-content: flex-start;
+
+
+}
+
+.SomeRandomInformation{
+
+    display: flex;
+    color: #1F2937;
+    padding: 50px;
+    justify-content: center;
+    background-color: #f5f5f5;
+}
+
+.FourAlignedPics{
+    flex-flow: column wrap;
+    justify-content: center;
+    align-content: center;
+    color: #f5f5f5;
+
+}
+
+.InspiringQuote{
+
+
+
+}
+
+.CallToAction{
+
+
+
+}
+
+.Copyright{
+
+
+
+}
