--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,7 @@ gap: 16px;
 
     display: flex;
     color: #1F2937;
-    padding: 50px;
+    padding: 20px;
     justify-content: center;
     background-color: #f5f5f5;
 }
@@ -76,15 +76,15 @@ gap: 16px;
     display: flex;
     text-align: justify;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-content: center;
     color: #1F2937;
     background-color: #f5f5f5;
-
+    gap: 50px;
 }
 
 .InspiringQuote{
-
+    background-color: #E5E7EB
 
 
 }
